added models for now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,10 @@
-<h1>This is a test, it is only a test</h1>
+<h1>Some News from NPR </h1>
+
+ <div class="article">
+{{#each result}}
+<h3>{{this.title}}</h3>
+<h3>{{this.link}}</h3>
+{{/each}}
+
+
+ </div> 
