--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,11 +8,20 @@
       </ul>
     </div>
   </nav>
+
+
+
+    
+
+
+  <br>
+  <br>
+  <br>
     
     <div class="row">
         {{#each result}}
         <div class="col l4 m6 s12">
-            <div class="card #ef6c00 orange darken-3">
+            <div class="card #00796b teal darken-2">
                 <div class="card-content white-text">
                     <span class="card-title">{{this.title}}</span>
                     <p id="summary">{{this.summary}}.</p>
